# libgtextutils

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  gtextutils.pc.in
src/: CMakeLists.txt
src/gtextutils/: CMakeLists.txt  Makefile.am  container_join.h  exit_manip.h  inbuf1.hpp  natsort.h  outbuf3.hpp  pipe_fitter.c  pipe_fitter.h  stream_wrapper.cpp  string_tokenize.h  text_line_reader.cpp  text_line_reader.h  tuple_parser.h
tests/: Makefile.am  test_in_out_buf.cpp
